--- a/_drafts/2020-12-31-blog-post-15.md
+++ b/_drafts/2020-12-31-blog-post-15.md
@@ -29,8 +29,9 @@ On volleys, contact the ball in front while moving forward. If the ball bounces 
 For serves, toss the ball higher.
 On backhands, make sure to keep the left arm bent on the backswing, and then flex the chest with my left hand pointing backwards when hitting the ball.
 Red light yellow light green light: a great exercise for reading the ball. 
-Forehand: instead of jumping up, transition body weight forward
+Forehand: instead of jumping up, transition body weight forward, and wait to drop the racket
 Ready stance: squat down much lower than you think you need to
+For serves, toss the ball higher, which gives time for a bigger serve motion and longer rackethead travel path. Bend and push off both legs for power, and bring the right foot up to the left like Andy Murray. Hit the ball while it's high in the air, and make good contact. On the first serve, the ball should go directly down into the court. 
 
 **Weightlifting.** 
 
@@ -85,4 +86,6 @@ Songs
 
 Youtubers
 ------
-
+- [Conan & Jordan Schlansky](https://www.youtube.com/watch?v=Auh74d_OG8Y)
+- [PPPeter](https://www.youtube.com/watch?v=dKY58bqNVFA)
+- [bald and bankrupt](https://www.youtube.com/c/baldandbankrupt/videos)
