--- a/_drafts/2020-12-31-blog-post-15.md
+++ b/_drafts/2020-12-31-blog-post-15.md
@@ -50,7 +50,16 @@ Reading
 
 ### *A Field Guide to Lucid Dreaming*
 
-### *Metaphors We Live By*
+### *Metaphors We Live By* by George Lakoff and Mark Johnson
+The message of this book is that people often (and often unknowingly) use physical and social experiences as metaphors to better understand abstract concepts such as work, time, mental activity, and feelings. 
+Specifically, human thought processes are metaphorical, and we use *conceptual metaphors* are used to understand one idea in terms of another.
+
+Within conceptual metaphors, there are three subtypes:
+1. *Structural* metaphors present complex concepts in terms of simpler ones. E.g., argument is war; time is money. 
+2. *Orientational* metaphors give concepts a spatial orientation. E.g., more is up; healthy is up; happy is up. 
+3. *Ontological* metaphors allow us to refer to something as an entity. E.g., the mind is a fragile object (he broke under pressure); activities are containers (Jerry *got out of* doing the dishes); personification.
+
+Here's one that applies to my favourite pasttime: *tennis is war*. 
 
 ### *The Outsider* by Stephen King
 I hold Stephen King to high standards, and this book did not turn out the way I had hoped. 
