--- a/_drafts/2020-12-31-blog-post-15.md
+++ b/_drafts/2020-12-31-blog-post-15.md
@@ -6,49 +6,70 @@ tags:
   - nlp
   - research
   - tennis
-  - meditation
   - reading
 ---
 
-Intro sentence
+This quarter, I started my AI residency at Google. In other words, it's grind time, and I need to get my life together. 
 
 Research
 ------
-I got rejections for two papers from both AACL and COLING, which was hard to stomach and had me questioning what mistakes I had made with these two papers.
+
+**On paper rejections.**
+I got rejections for two papers from both AACL and COLING (and also bad reviews at EACL), which was hard to stomach and had me questioning what mistakes I had made with these two papers.
 Is it wrong to be upset by rejections and happy for acceptances when there is so much noise in reviewing?
 Perhaps this is a call for me to focus more on the systems than the results.
 
+<img src='/images/20f/20f_room.jpg' width="100%">
 
-Health and Fitness
+Fitness
 ------
-
-**Tennis.** 
-Some things for me to work on
-Better ready position, reading the ball, and recovery. I might not hit like a 5.0 player but I can have the ready position of one. 
-On volleys, contact the ball in front while moving forward. If the ball bounces close to your feet, get low and either take it early or off the bounce. 
-For serves, toss the ball higher.
-On backhands, make sure to keep the left arm bent on the backswing, and then flex the chest with my left hand pointing backwards when hitting the ball.
-Red light yellow light green light: a great exercise for reading the ball. 
-Forehand: instead of jumping up, transition body weight forward, and wait to drop the racket
-Ready stance: squat down much lower than you think you need to
-For serves, toss the ball higher, which gives time for a bigger serve motion and longer rackethead travel path. Bend and push off both legs for power, and bring the right foot up to the left like Andy Murray. Hit the ball while it's high in the air, and make good contact. On the first serve, the ball should go directly down into the court. 
 
 **Weightlifting.** 
+My brother and I bought a weightlifting rack for our house, and it was a great purchase. 
+With easy access to weights, I improved my bench from 145 to 165lbs, and hit a PR of 205lbs at a body weight of 138 lbs (my last PR, 200lbs, was over a year ago, and I weighed 157lbs).
+It helped to track my lifts on [Google Sheets](https://docs.google.com/spreadsheets/d/1svX0zuMAuPm-y6QdHbSMelaNsVT7DYOPFrsaAgsH3as/edit?usp=sharing). 
+However, I did not follow-through on my plans to routinely do a murph challenge.
 
-**Murph.** 
+**Tennis.** 
+I continued to play tennis 1-4 times a week. 
+Since I've been playing regularly for a while now, I am starting think about improving my tennis game as well as getting in exercise.
+I worked on my backhand, which is now more consistent, at least against rally balls.
+I also played a lot more singles and sets, and so my serve also improved a lot---my first serve can be a weapon, and on a good day I will double fault less than once per game.
+Some things for me to think about and work on:
+- For the ready position, squat down much lower than you think you need to.
+- Intentionally read the ball and recover after the shot. You might not hit like a 5.0 player, but you can recover like one if you try. Red light, yellow light, green light is a great exercise for reading the ball.
+- For forehands, instead of jumping up, transition your body weight forward. Also, wait to drop the racket.
+- For backhands, make sure to keep the left arm bent on the backswing, and then flex your chest with my left hand pointing backwards when hitting the ball. 
+- For serves, the key is in a good toss. Tossing the ball higher gives more time for a bigger serve motion and longer rackethead travel path. Bend and push off both legs for power, and bring the right foot up to the left like Andy Murray. Hit the ball while it's high in the air, and make good contact. On the first serve, the ball should go directly down into the court. 
+- For volleys, remember to contact the ball in front while moving forward. If the ball bounces close to your feet, get low and either take it early or off the bounce.
 
-Meditation
+<video src="/images/20f/IMG_4307.mp4" width="49%" autoplay loop></video>
+<video src="/images/20f/IMG_4332.mp4" width="49%" autoplay loop></video>
+
+Learning Danish
 ------
+I decided to start learning Danish on duolingo. 
+At the time that I write this, I have a 75 day streak! 
+But that doesn't mean I can speak at any competent level.
+I was originally hoping to be able to travel to or live in Denmark again, but that probably won't happen for a while. 
+Therefore, I see learning Danish a mental exercise, as well as a way to learn more about Danish culture.
+
+Miscellanea
+------
+- My brother got in Stanford for his undergrad! I am so proud of him.
+- For thanksgiving, my mom, my brother, and I had an amazing meal and played poker with family friends.
+- Installing the [distraction free youtube extension](https://chrome.google.com/webstore/detail/df-tube-distraction-free/mjdepdfccjgcndkmemponafgioodelna?hl=en) on chrome helped substantially curb my youtube time by blocking their recommender system.
+- I didn't get in a good habit of meditating this quarter, unfortunately.
 
 
 Making videos
 ------
-- [Trying](https://www.youtube.com/watch?v=6GhjUHB8zpk) to do the Killing Eve "Billie" Monologue
+- Tennis [practice](https://www.youtube.com/watch?v=jeuH4vW7Mq8); game against william; another game [part 1](https://www.youtube.com/watch?v=r16M2dZpSFs) [part 2](https://www.youtube.com/watch?v=1bdd9MJip20). (Notice my serve got much better from the first game with william.)
+- [Reviewing](https://www.youtube.com/watch?v=pcp9w16NuV4) my Dartmouth admissions file.
+- [Reflecting](https://www.youtube.com/watch?v=Wo20LOjGBHM) on 2020. 
 
 Reading
 ------
-
-### *A Field Guide to Lucid Dreaming*
 
 ### *Metaphors We Live By* by George Lakoff and Mark Johnson
 The message of this book is that people often (and often unknowingly) use physical and social experiences as metaphors to better understand abstract concepts such as work, time, mental activity, and feelings. 
@@ -67,6 +88,12 @@ It starts with the murder of a boy with unmistakable evidence, but the man charg
 I thought there would be a real solution to the story, but it turned out to be supernatural. 
 Still, reading Stephen King has improved my writing vocabulary and creativity noticeably.
 
+### *The Almost Nearly Perfect People* by Michael Booth
+Michael Booth breaks down the Scandinavian facade that is often idolized in today's media. 
+He embeds history and anthropology into his retellings of some of his experiences traveling Denmark and learning about Danish culture.
+His accounts often seemed too biased against Denmark, however. 
+Nonethess, I enjoyed the nuggets of Denmark that resurrected in my memory while reading the book.
+
 ### *The Third Door* by Alex Banayan
 This was a gripping story of how a college student went to interview Bill Gates, Tim Ferris, Larry King, and others about what they did early on in their careers to become successful. 
 The main door is the one with 99% waiting in line, the second door is for rich people and VIPs, and the third door is a more convoluted path and is how these people became successful. 
@@ -82,15 +109,17 @@ Some inspiring concepts nonetheless:
 
 Who are my heroes?
 ------
+The usuals: Conan, ice1cube, Randy Pausch, Sam Harris. 
 
 
 Closing
 ------
-
+Though this fall marked the start of my AI residency, life was still about building the habits and routines that I had been doing before, only now, I'm busier and the stakes are higher.
 
 
 Songs
 ------
+Best of 20\{17,18,19\} mixes by Mr. Suicide Sheep are what I've been listening to while programming.
 
 
 Youtubers
