--- a/_drafts/2020-12-31-blog-post-15.md
+++ b/_drafts/2020-12-31-blog-post-15.md
@@ -20,6 +20,7 @@ Is it wrong to be upset by rejections and happy for acceptances when there is so
 Perhaps this is a call for me to focus more on the systems than the results.
 
 <img src='/images/20f/20f_room.jpg' width="100%">
+My home office (converted from my old bedroom).
 
 Fitness
 ------
@@ -45,6 +46,7 @@ Some things for me to think about and work on:
 
 <video src="/images/20f/IMG_4307.mp4" width="49%" autoplay loop></video>
 <video src="/images/20f/IMG_4332.mp4" width="49%" autoplay loop></video>
+Left, 5x5 pull ups at 1 plate; right, 1RM touch-and-go bench press at 205lbs.
 
 Learning Danish
 ------
@@ -64,7 +66,7 @@ Miscellanea
 
 Making videos
 ------
-- Tennis [practice](https://www.youtube.com/watch?v=jeuH4vW7Mq8); game against william; another game [part 1](https://www.youtube.com/watch?v=r16M2dZpSFs) [part 2](https://www.youtube.com/watch?v=1bdd9MJip20). (Notice my serve got much better from the first game with william.)
+- Tennis [practice](https://www.youtube.com/watch?v=jeuH4vW7Mq8); [game](https://www.youtube.com/watch?v=LpCNIBomYEg) against william; another game [[part 1]](https://www.youtube.com/watch?v=r16M2dZpSFs) [[part 2]](https://www.youtube.com/watch?v=1bdd9MJip20). (Notice my serve got much better from the first game with william.)
 - [Reviewing](https://www.youtube.com/watch?v=pcp9w16NuV4) my Dartmouth admissions file.
 - [Reflecting](https://www.youtube.com/watch?v=Wo20LOjGBHM) on 2020. 
 
