update with eacl

--- a/_drafts/2020-4-1-blog-post-16.md
+++ b/_drafts/2020-4-1-blog-post-16.md
@@ -41,6 +41,8 @@ Reading
 ### *A Field Guide to Lucid Dreaming*
 TODO
 
+### *The Institute* by Steven King
+This is another paranormal thriller book by Steven King. It was pretty good (but not as good as *Misery*). The good thing was it was not too spooky, so I didn't get the willies as much before bed. 
 
 
 Who are my heroes?
