add small changes

--- a/_drafts/2020-4-1-blog-post-16.md
+++ b/_drafts/2020-4-1-blog-post-16.md
@@ -11,7 +11,13 @@ Intro
 
 Research
 ------
+EACL submission was accepted
+ACL was crazy: UID, survey paper, help Ruibo
 
+
+PhD
+------
+I applied to PhD programs again, with low expectations. My low expectations were justified: I got rejected from Stanford, MIT, and UW. 
 
 
 Fitness
@@ -37,6 +43,8 @@ Making videos
 
 Reading
 ------
+
+### *High Performance Habits* by Brendan Burchard
 
 ### *A Field Guide to Lucid Dreaming*
 TODO
