update with naacl

--- a/_drafts/2020-4-1-blog-post-16.md
+++ b/_drafts/2020-4-1-blog-post-16.md
@@ -24,9 +24,14 @@ Fitness
 ------
 
 **Weightlifting.** 
-
+I started working on shoulders and triceps a bit in early january, but then one day I started getting a worrysome clicking sensation in my left shoulder, which I had had before. This stopped my progress for about a month, bringing me down from my 5x5 bench press from 170 lbs to 145 lbs.
 
 **Tennis.** 
+The one thing that I changed about tennis is that I tried to engage in *deliberate practice* by doing mostly drills during practice sessions. Some of the drills that I did included:
+* Cross court on "yellow" balls, down the line on "green."
+* Returner of feed must hit two forehands in a row.
+* 99 bananas: 5 points for winners and points won at net, 10 for overheads. Minus 5 points for every shot hit into the net. Sounds stupid but teaches you not to hit it short.
+I also tried to work on volleys and serves every practice.
 
 
 <video src="/images/IMG_7887.mp4" width="49%" autoplay loop></video>
