--- a/_drafts/2020-4-1-blog-post-16.md
+++ b/_drafts/2020-4-1-blog-post-16.md
@@ -7,17 +7,18 @@ tags:
   - research
 ---
 
-Intro
+This past term at home passed by fast. And it feels like I worked, but didn't make too much progress.
 
 Research
 ------
-EACL submission was accepted
-ACL was crazy: UID, survey paper, help Ruibo
+Alas, many of my pre-google submissions were accepted.
+My paper on multi-task view text data augmentation was accepted to EACL, and my therapy conversations and few-shot text classification papers were accepted to NAACL. 
+Having these papers accepted was a good start to my publication record and gave me some more confidence for submitting papers, especially after rejections from COLING and AACL. 
 
 
-PhD
+Applying to PhD Programs
 ------
-I applied to PhD programs again, with low expectations. My low expectations were justified: I got rejected from Stanford, MIT, and UW. 
+I applied to PhD programs again, with low expectations. My low expectations were justified: I got rejected from Stanford, MIT, and UW. I was very excited, however, to have been accepted to ETHZ with Ryan Cotterell. I worked with Ryan on a psycholingistics project. He is very creative (approriately, Albert Einsten, who went to ETHZ, said "true sign of intelligence is not knowledge but imagination"), and I would love to continue working with him. 
 
 
 Fitness
@@ -25,6 +26,7 @@ Fitness
 
 **Weightlifting.** 
 I started working on shoulders and triceps a bit in early january, but then one day I started getting a worrysome clicking sensation in my left shoulder, which I had had before. This stopped my progress for about a month, bringing me down from my 5x5 bench press from 170 lbs to 145 lbs.
+I had a bad effect on my fitness thereafter, for which I did not really improve my bench press. IN some highlights, however, I did do a murph in less than 55 minutes, and also did 250 pull ups in one hour with Abhishek.
 
 **Tennis.** 
 The one thing that I changed about tennis is that I tried to engage in *deliberate practice* by doing mostly drills during practice sessions. Some of the drills that I did included:
@@ -33,34 +35,33 @@ The one thing that I changed about tennis is that I tried to engage in *delibera
 * 99 bananas: 5 points for winners and points won at net, 10 for overheads. Minus 5 points for every shot hit into the net. Sounds stupid but teaches you not to hit it short.
 I also tried to work on volleys and serves every practice.
 
-
-<video src="/images/IMG_7887.mp4" width="49%" autoplay loop></video>
 <video src="/images/IMG_7890.mp4" width="49%" autoplay loop></video>
 
-Learning Danish
+Personal
 ------
 
+**Learning Danish.** I kept up my Duolingo streak (161 days!). But, the lessons are getting hard, and I often have to look at the translations during the exercises.
 
+**Making videos.** I recorded some videos of me playing tennis, such as this [warm-up session](https://www.youtube.com/watch?v=4RQkIyhvvBY&list=PLde1z_HYAVJxIxzxx49lZQEknoGkbqyyK&index=3&t=557s&ab_channel=JasonWei) and this [drill](https://www.youtube.com/watch?v=VbrArNvGD9Y&list=PLde1z_HYAVJxIxzxx49lZQEknoGkbqyyK&index=4&t=1s).
 
-Making videos
-------
-
+I moved my working space to the upstairs sunroom in my house, which had really great lighting.
+<img src='/images/sunroom_office.jpg' width="100%">
 
 Reading
 ------
 
 ### *High Performance Habits* by Brendan Burchard
-
-### *A Field Guide to Lucid Dreaming*
-TODO
+This may be the best self-help book I have ever read. I read it twice. In fact, I liked it so much that I bought a hardcover version of it, even though I already have it on kindle. 
 
 ### *The Institute* by Steven King
 This is another paranormal thriller book by Steven King. It was pretty good (but not as good as *Misery*). The good thing was it was not too spooky, so I didn't get the willies as much before bed. 
 
+I wanted to read *A Field Guide to Lucid Dreaming* in more depth but couldn't find the time. 
 
 Who are my heroes?
 ------
-
+- I guess Conan is funny. 
+- My Google mentors are great. 
 
 Closing
 ------
@@ -71,7 +72,6 @@ Songs
 ------
 
 
-
 Youtubers
 ------
-
+- bald and bankrupt, as always. 
