--- a/_drafts/2020-12-31-blog-post-15.md
+++ b/_drafts/2020-12-31-blog-post-15.md
@@ -121,8 +121,8 @@ Though this fall marked the start of my AI residency, life was still about build
 
 Songs
 ------
-Best of 20\{17,18,19\} mixes by Mr. Suicide Sheep are what I've been listening to while programming.
-
+- [My Own Soul's Warning](https://www.youtube.com/watch?v=cHNVhrQZG6E&ab_channel=TheKillersVEVO) by The Killers is probably one of the ten best songs I've ever listened to. 
+- Best of 20\{17,18,19\} mixes by Mr. Suicide Sheep are what I've been listening to while programming.
 
 Youtubers
 ------
