--- a/_drafts/2020-4-1-blog-post-16.md
+++ b/_drafts/2020-4-1-blog-post-16.md
@@ -7,14 +7,13 @@ tags:
   - research
 ---
 
-This past term at home passed by fast. And it feels like I worked, but didn't make too much progress.
+This past term at home passed by fast. I worked, but it feels like I didn't make too much progress.
 
 Research
 ------
-Alas, many of my pre-google submissions were accepted.
+Alas, all of my pre-google submissions were accepted.
 My paper on multi-task view text data augmentation was accepted to EACL, and my therapy conversations and few-shot text classification papers were accepted to NAACL. 
 Having these papers accepted was a good start to my publication record and gave me some more confidence for submitting papers, especially after rejections from COLING and AACL. 
-
 
 Applying to PhD Programs
 ------
@@ -26,7 +25,7 @@ Fitness
 
 **Weightlifting.** 
 I started working on shoulders and triceps a bit in early january, but then one day I started getting a worrysome clicking sensation in my left shoulder, which I had had before. This stopped my progress for about a month, bringing me down from my 5x5 bench press from 170 lbs to 145 lbs.
-I had a bad effect on my fitness thereafter, for which I did not really improve my bench press. IN some highlights, however, I did do a murph in less than 55 minutes, and also did 250 pull ups in one hour with Abhishek.
+I had a bad effect on my fitness thereafter, for which I did not really improve my bench press. In some highlights, however, I did do a murph in less than 55 minutes, and separately also did 250 pull ups in one hour with Abhishek.
 
 **Tennis.** 
 The one thing that I changed about tennis is that I tried to engage in *deliberate practice* by doing mostly drills during practice sessions. Some of the drills that I did included:
@@ -58,18 +57,21 @@ This is another paranormal thriller book by Steven King. It was pretty good (but
 
 I wanted to read *A Field Guide to Lucid Dreaming* in more depth but couldn't find the time. 
 
+
 Who are my heroes?
 ------
 - I guess Conan is funny. 
 - My Google mentors are great. 
 
+
 Closing
 ------
-
+This term feels a bit like a failed attempt to seek clarity, both in my research directions and in my fitness. 
 
 
 Songs
 ------
+No new songs.
 
 
 Youtubers
