--- a/_drafts/2020-7-1-blog-post-17.md
+++ b/_drafts/2020-7-1-blog-post-17.md
@@ -39,6 +39,10 @@ After re-reading Anchee Min's *Red Azalea*, I decided to read her autobiographic
 * Second, I resonated slightly with the East meets West culture clash, as Anchee clarified many of the historic underpinnings of many habits that I had seen in my family growing up. Moreover, Anchee brought to light that some things that I have long taken for granted---healthcare, freedom of speech, believing that one could make it in life---these were not so readily available during China's cultural revolution. 
 * Finally, through Anchee's personal description of raising Lauryann, I saw many characteristics of sacrifies that my mom made to give me and my brother the upbringing that we had (though my mom was more lenient than Anchee). I felt a thorough admiration for the challenges one undertakes in being a parent. 
 
+### *Conscious: A Brief Guide to the Fundamental Mystery of the Mind* by Annaka Harris
+This book was indeed brief, and a bit disappointingly so. The topic, however, is relevant and thought-provoking. What is consciousness? Harris says that an organism is conscious if it is "like something" to be that organism. To me, this definition is not satisfying. The book also provided a compelling case for panpsychism, which posits that all matter is conscious, to varying degrees.
+
+This book did spark me to consider whether we could make a machine consicous. Would an algorithm that could, at any given time, describe in natural language what it felt like to be it, be conscious? It would be cool to build something like this.
 
 
 Who are my heroes?
@@ -53,8 +57,7 @@ Closing
 
 Songs
 ------
-No new songs.
-
+- The new [The Strokes album](https://www.youtube.com/watch?v=4yn98ht1ViU&ab_channel=rivertine) is great. 
 
 Youtubers
 ------
