add stuff to blog?

--- a/_drafts/2020-7-1-blog-post-17.md
+++ b/_drafts/2020-7-1-blog-post-17.md
@@ -11,7 +11,7 @@ asdf
 
 Research
 ------
-
+Starting in mid-April to mid-May, I started putting in a ton more work hours in order to make pushes for the EMNLP deadline. 
 
 
 Fitness
