--- a/_drafts/2021-7-1-blog-post-17.md
+++ b/_drafts/2021-7-1-blog-post-17.md
@@ -9,7 +9,7 @@ tags:
 
 This quarter was tough in terms of work but I had to do it. 
 Starting May 2, for five weeks I spent as much time as I could working, only playing tennis three times. 
-One week, I spent 47 hours on coding/experiments. 
+One week, I spent 47 hours on coding/experiments (this is a lot of time for me). 
 
 Research
 ------
@@ -20,10 +20,12 @@ Fitness
 ------
 
 **Weightlifting.** 
-Not play tennis gave me some mental bandwidth to focus a bit more on weightlifting. My pull ups are getting pretty strong, hitting 65lbs for a 5x5 and doing 90lbs for a set of 3. 
+Not playing tennis as much gave me additional mental bandwidth to focus a bit more on weightlifting. My pull ups are getting pretty strong, hitting 65lbs for a 5x5 and doing 90lbs for a set of 3 [[video]](https://www.youtube.com/watch?v=pE2zvytYpmE). 
 
 **Tennis.** 
-Not playing for a bit, I definitely feel less in shape and I'm not able to feel the ball as well as before. The couple of times I played in June, I got tired quickly and my arm was sore for days after. But I did take a nice [video](https://www.youtube.com/watch?v=AQU5rZ3Ha8A) of me playing Ash.
+Not playing for a bit, I definitely feel less in shape and I'm not able to feel the ball as well as before. 
+The couple of times I played in June, I got tired quickly and my arm was sore for days after. 
+But I did get a nice [video](https://www.youtube.com/watch?v=AQU5rZ3Ha8A) of me playing against Ash.
 
 
 Personal
@@ -32,10 +34,11 @@ Personal
 **Learning Danish.** Sadly, I decided to give up my Duolingo streak on Danish. Surprisingly, I felt that relieving myself from a daily activity of only five minutes actually translated to much more freedom than just five minutes. 
 
 **Making videos.** 
-Prahlad, Ash, Abhishek, and I went to Shenandoah National Park / Big Meadows in April and Luray Caverns in May. 
+Prahlad, Ash, Abhishek, and I went to Shenandoah National Park / Big Meadows in April and Luray Caverns in early May. I [raced](https://www.youtube.com/watch?v=kWRuuu-VM3s) Abhishek. 
 
 **Selling our childhood home.**
-We made the decision to put our childhood home [for sale](https://youriguide.com/12905_rose_grove_drive_herndon_va/). In September, I will move to New York and my brother will move to Palo Alto, and our house is too big for just my mom to live in.
+We made the decision to put our childhood home [for sale](https://youriguide.com/12905_rose_grove_drive_herndon_va/). We sold it for 1.699M. 
+In September, I will move to New York and my brother will move to Palo Alto, and our house is too big for just my mom to live in.
 My mom is a true superhero, as she prepared the house for sale (non-trivial!) all while having two jobs and cooking for my brother and I. 
 Some house tasks that needed to be done included painting the walls, throwing away our old furniture and old clothes (there's a lot of that), selling stuff, and scrubing the bathrooms. 
 I helped out whenever I could, especially with tasks that required moving furniture. 
@@ -57,12 +60,14 @@ This book did spark me to consider whether we could make a machine consicous. Wo
 
 Who are my heroes?
 ------
-
+- I have pretty much watched all Conan remotes, and I've watched a lot of his videos multiple times. 
+- I watched the counterpart TV show. It is really good, and I am obsessed with Christiane Paul, who plays Mira. 
+- I've also watched a couple of Famke Janssen movies/shows. 
 
 
 Closing
 ------
-
+It was a tough three months, and I hunkered down on the work that had to be done. In terms of research, I think I grew tremendously, ("moonshots only!") and I feel so fortunate to be in a sitation where I can focus on research without other parts of my personal life consuming my time and energy.
 
 
 Songs
