--- a/_drafts/2021-10-1-blog-post-18.md
+++ b/_drafts/2021-10-1-blog-post-18.md
@@ -32,6 +32,29 @@ Reading
 
 ### *Lying* by Sam Harris
 
+This essay is a short and sweet argument against lying, especially white lies. 
+Lying means intentionally misleading someone when they expect the truth.
+The summary of the argument is that (barring extreme situations) telling the truth may cause to uncomfort in the short term, but leads to better outcomes in the long run.
+
+These are the two arguments I found most compelling.
+
+**Honesty as a filter.**
+First, honesty acts as a filter for the people around you.
+For instance, if a friend asked me to read a manuscript they wrote and I thought it was bad, I might be compelled to lie and say that it's good so I don't hurt their feelings or explain why. 
+But upon a closer analysis, it becomes obvious that honesty actually leads to a better outcome. 
+Let's say my friend wanted uninhibited feedback on their manuscript. 
+By telling them what I thought wasn't great about their work (and this can be done in a nice way!), I've potentially saved them from future rejections or receiving the same criticism from their advisor.
+Moreover, next time they send me a manuscript and I say I do like it, they know that it's worth something.
+On the other hand, if they are offended that I didn't like their paper, then they won't interact with me further, which is actually a good thing because I do not want to interact professionally with people like that.
+
+**Truth as a mirror.** 
+The second reason to always tell the truth is that it holds a mirror in front of yourself.
+Let's say that you are canceling a date with a girl because you think she's too fat. 
+Lying and saying that your car broke is easy enough, and you wouldn't think about it any further. 
+But if you are always honest, you have to comfront the honest truth about yourself, which is, what kind of person are you to not go on the date just because the girl was fat?
+
+At this point, enough people who I admire from various walks of life (Mark Manson, Randy Pausch) have preached the value of honesty that this is a no-brainer for me.
+
 
 Who are my heroes?
 ------
