--- a/_posts/2021-10-1-blog-post-18.md
+++ b/_posts/2021-10-1-blog-post-18.md
@@ -91,8 +91,8 @@ I also noticed that as an adult, I was much more open to learning about history,
 
 I also saw the Museum of Natural History briefly, though it seemed like it's mostly for kids. I enjoyed the exhibit on "Human Origins", though.
 
-<video src="/images/21_bench_sully.mov" width="49%" autoplay loop></video>
-<video src="/images/21_reflection_pool.mov" width="49%" autoplay loop></video>
+<video src="/images/21_bench_sully.mov" width="49%" autoplay loop controls muted></video>
+<video src="/images/21_reflection_pool.mov" width="49%" autoplay loop controls muted></video>
 
 Reading
 ------
