--- a/_posts/2022-4-1-blog-post-20.md
+++ b/_posts/2022-4-1-blog-post-20.md
@@ -1,3 +1,12 @@
+---
+title: 'Winter 2022: '
+date: 2022-4-1
+permalink: /posts/2022/4/blog-post-20/
+tags:
+  - mountain view
+  - wacv
+---
+
 ## WACV
 
 From January 3-9, I traveled to Hawaii for WACV. 
@@ -32,13 +41,21 @@ I was thinking about doing a PhD and so I visited the programs that I had got in
 
 **Princeton.** Princeton has been a dream school of mine for a while. Visiting made me nostalgic of Dartmouth, as I loved the Ivy feel and close-knit culture. As my friend Maxine says, Princeton is basically Dartmouth on steroids: the history is older; the people are richer; the architecture is fancier. It was really cool to meet Danqi in person, and I could tell the students in her group were all close to each other.
 
+<img src='/images/IMG_5295.png' width="23%">
+<img src='/images/IMG_5309.jpeg' width="23%">
+<img src='/images/IMG_5301.jpeg' width="23%">
+<img src='/images/IMG_5317.jpeg' width="23%">
 Left: visiting my cousin Michael and his fiance in Seattle. Left middle: UW campus. Right middle: Gas Works Park with some friends. Right: Princeton.
 
 **London / Cambridge.** I stayed with my friend and former boss Kai in London. It was absolutely a pleasure to meet the people in his circle and see his life in London. I think it'd be really cool to be part of his start-up, and I got a better understanding of what a luxurious lifestyle means. I also took the train to Cambridge, which was a pretty cool town to walk through, although I didn't have enough time to really walk through the colleges. 
 
 **Zurich / ETH.** Zurich is one of the nicest cities I've been to, and reminds me a lot of Copenhagen. It felt like a really nice society to live in: the streets are clean, the city is very organized, the people are well-groomed and well-dressed. I feel willing to move to Zurich---city life and the cold weather were small factors compared to the adventure offered by spending half a decade in one of the most iconic European cities. Who could turn down such an adventure? Ryan is also really tall...
 
-Left to right: London eye; Seurat painting; Zurich opera house; [find name of river in zurich]; Water lounge in Google Zurich.
+<img src='/images/IMG_5320.png' width="23%">
+<img src='/images/IMG_5327.png' width="23%">
+<img src='/images/IMG_5342.png' width="23%">
+<img src='/images/IMG_5345.png' width="23%">
+Left: London eye. Left middle: Seurat painting. Right middle: Zurich opera house. Right: the Limmat River.
 
 ## Reading
 
