update blog post

--- a/_posts/2022-4-1-blog-post-20.md
+++ b/_posts/2022-4-1-blog-post-20.md
@@ -18,20 +18,32 @@ I enjoyed Kristen Grauman's Keynote talk on how CV techniques can be used to ana
 
 At the conference I met another Googler Maryam and a Microsoft researcher Muhamed, and we and some Boston University and UC Berkeley students together went to visit some tourist attractions.
 We went to Akaka Falls, Rainbow Falls, Hawaii Volcanoes National Park, and downtown Kona.
-The unforgettable moment, however, was a challenging hike up a scenic cliff near Kohala Mountain Road at sunset. 
+The unforgettable moment, however, was [a challenging hike up a scenic cliff](https://www.youtube.com/watch?v=ynR_Nlv7V9c) near Kohala Mountain Road at sunset. 
 The view was as sublime as any landscape that I had seen in Iceland.
 Muhamed was also a fascinating being to meet, and it was eye-opening to hear about his experiences.
+
+<img src='/images/IMG_5158.jpeg' width="32%">
+<img src='/images/IMG_5201.jpeg' width="32%">
+<img src='/images/IMG_5224.jpeg' width="32%">
+Left: Rainbow Falls. Middle: scenic cliff near Kohala Mountain Road. Right: group picture at Hawaii Volcanoes National Park.
 
 ## Family
 
 In february, I was so grateful to spend some time back in Texas with my family. 
 My grandpa and grandma are still in good health, and spending time with them means the world to me. 
 I feel like the additional maturity I have gained since the last time I saw them allowed me to connect with them and appreciate them on a deeper level.
-I enjoyed playing chess with them, and even seeing my grandpa ride a bike.
+I enjoyed playing chess with them, and even seeing [my grandpa ride a bike](https://www.youtube.com/watch?v=q9aTwqfbJlA).
 
 ## Beibei
 
 Our family's cat, Beibei (my brother calls him Brian), passed away in late March, after being with us for more than ten years. He became more outgoing and sociable throughout the years, and our whole family loved him. I will miss him dearly.
+
+
+<img src='/images/IMG_5234.jpeg' width="23%">
+<img src='/images/IMG_5244.jpeg' width="23%">
+<img src='/images/IMG_0169.jpeg' width="23%">
+<img src='/images/IMG_5267.jpeg' width="23%">
+Left: selfie with my Grandma and Grandpa. Middle left: me and my Grandma. Middle right: riding a mule. Right: Bei-bei destroys my Chinese chess game with my mom.
 
 ## Travels
 
